feat: add automated computation of dependencies from composer.json

--- a/libs/package-c/composer.json
+++ b/libs/package-c/composer.json
@@ -12,5 +12,8 @@
             "name": "Damien Retzinger",
             "email": "damienwebdev@gmail.com"
         }
-    ]
+    ],
+    "requires": {
+        "demo-nx-php/package-b": "*"
+    }
 }
