--- a/nx.json
+++ b/nx.json
@@ -39,5 +39,8 @@
         "projects": "dependencies"
       }
     ]
-  }
+  },
+  "plugins": [
+    "./tools/plugins/composer-graph/ComposerGraphPlugin.js"
+  ]
 }
